<resources>
    <string name="app_name">About me</string>
    <string name="my_name">Vladislav Hrushovyi</string>
    <string name="age">Age: 20</string>
    <string name="place_of_studing">Place of studing: Cherkasy National University by name Bogdan Khmelnytsky </string>
    <string name="faculty">Faculty: Faculty of Computer Engineering, Intelligent and Control Systems</string>
    <string name="phone_number">Phone number: +3800966051501</string>
    <string name="email">Email: vlad.grush.99@gmail.com</string>
</resources>
