<?xml version="1.0" encoding="UTF-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_margin="8dp"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"
        android:src="@drawable/my_photo" />

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:id="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:text="@string/my_name"
        android:textColor="#000"
        android:textSize="24sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/age_text"
        app:layout_constraintTop_toBottomOf="@+id/name_text"
        android:text="@string/age"
        android:textColor="#000"
        android:textSize="16sp"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:id="@+id/study_text"
        app:layout_constraintTop_toBottomOf="@+id/age_text"
        android:text="@string/place_of_studing"
        android:textColor="#000"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="16sp"
        android:id="@+id/faculty_text"
        app:layout_constraintTop_toBottomOf="@+id/study_text"
        android:text="@string/faculty"
        android:textColor="#000"
        android:layout_marginTop="8dp"/>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/email_text"
        app:layout_constraintTop_toBottomOf="@+id/faculty_text"
        android:text="@string/email"
        android:textColor="#000"
        android:layout_marginTop="8dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>